# alpha

./: .env.template  .gitignore  README.md  TRIAGE-PHASES4-8.md  TRIAGE-PLAN.md  check_data.py  pyproject.toml
docs/: FORWARD-TEST-CRITERIA.md  PHASE1-SPEC.md  PHASE2-SPEC.md  PHASE3-SPEC.md  PHASE4-SPEC.md  PHASE7-SETUP.md  PLAN.md
reports/: forward_test_holdback.json  forward_test_oos_vs_holdback.json  phase8_evaluation.md
src/: __init__.py
src/data/: __init__.py  adjust.py  catalog.py  config.py  enrich.py  ingestion.py  validate.py
src/data/sources/: __init__.py  base.py  polygon.py  yfinance.py
src/ensemble/: __init__.py  base.py  ic_weighted.py  lightgbm.py  pipeline.py  validation.py
src/execution/: __init__.py  broker.py  engine.py  ib_broker.py  ibkr_client.py  models.py  risk.py
src/features/: __init__.py  advanced.py  base.py  cross_sectional.py  pipeline.py  price.py  regime.py  registry.py  volatility.py  volume.py
src/monitoring/: __init__.py  alerts.py  config.py  dashboard.py  data_models.py  metrics.py  report.py
src/portfolio/: __init__.py  construction.py  integration.py  kelly.py
src/risk/: __init__.py  config.py  constraints.py  correlation.py  drawdown.py  pipeline.py  vol_targeting.py
src/signals/: __init__.py  base.py  mean_reversion.py  momentum.py  pipeline.py  registry.py
src/validation/: __init__.py  forward_test.py  perturbation.py  segmentation.py  walkforward.py
tests/: conftest.py  test_advanced_features.py  test_data_pipeline.py  test_enrich.py  test_ensemble.py  test_ensemble_ic.py  test_ensemble_integration.py  test_execution.py  test_features_batches.py  test_forward_test.py  test_ibkr_client.py  test_ic_ensemble.py  test_kelly.py  test_monitoring.py  test_perturbation.py  test_portfolio.py  test_portfolio_integration.py  test_resumption.py  test_risk.py  test_segmentation.py  test_signals.py  test_validation.py
