[project]
name = "alpha"
version = "0.1.0"
description = "Greenfield quantitative trading system"
requires-python = ">=3.12"
license = {text = "Private"}

dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
polygon = [
    "polygon-api-client>=1.0",
]
ib = [
    "ib_insync>=0.9",
]

[project.scripts]
alpha-ingest = "src.data.ingestion:main"
alpha-validate = "src.data.validate:main"
alpha-catalog = "src.data.catalog:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
